civo-github/cluster-types/mgmt/components/nginx-apex/nginx-apex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-apex-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: nginx-apex-cm
